Fixes RaidEvent to actually send shoutouts, adds !lurk and !raid.